code: add standard categories & tags to each post
Signed-off-by: hylerrix <hylerrix@gmail.com>

--- a/source/_posts/005-osm-002.md
+++ b/source/_posts/005-osm-002.md
@@ -1,6 +1,11 @@
 ---
 title: 开源爱好者月刊：第 2 期（202002）
 date: 2020-02-29
+comments: true
+toc: true
+categories: "开源爱好者月刊"
+tags:
+  - 开源爱好者月刊
 ---
 
 > 开源软件占所有软件的 80%-90%；二十年前一线程序员月薪 3000+，一台 32mb 内存电脑 8000+；如何吸引运营人员参与开源社区......开源的世界精彩万分，数不胜数；最后推荐一本书，介绍为什么“科学”曾是一种十分罕见的文化现象，根源于希腊人对于自由人性的追求。
