--- a/source/_posts/006-osm-003.md
+++ b/source/_posts/006-osm-003.md
@@ -1,6 +1,12 @@
 ---
 title: 开源爱好者月刊：第 3 期（202003）
 date: 2020-03-31
+comments: true
+toc: true
+categories: "开源爱好者月刊"
+tags:
+  - 开源爱好者月刊
+  - 疫情
 ---
 
 > 自 1998 年开源定义诞生以来，开源运动就得到了全球众多开发者的拥护。现在来看，来自世界各地的开发者，共同创造出所有人都能自由使用的工具，是一件多么伟大的事情。正因为软件开发是一项团队运动，必须与其他人合作，当有一群人共同参与时，软件才能够更好地被开发。可以说，开源是当代互联网行业发展的必然趋势。
