--- a/source/_posts/008-osm-004.md
+++ b/source/_posts/008-osm-004.md
@@ -1,6 +1,12 @@
 ---
 title: 开源爱好者月刊：第 4 期（202004）
 date: 2020-04-30
+comments: true
+toc: true
+categories: "开源爱好者月刊"
+tags:
+  - 开源爱好者月刊
+  - 开源女性
 ---
 
 ## 序言
