--- a/source/_posts/00D-osm-005.md
+++ b/source/_posts/00D-osm-005.md
@@ -1,6 +1,12 @@
 ---
 title: 开源爱好者月刊：第 5 期（202005）
 date: 2020-06-01
+comments: true
+toc: true
+categories: "开源爱好者月刊"
+tags:
+  - 开源爱好者月刊
+  - Github
 ---
 
 ## 序言
