--- a/source/_posts/004-osm-001.md
+++ b/source/_posts/004-osm-001.md
@@ -1,6 +1,11 @@
 ---
 title: 开源爱好者月刊：第 1 期（202001）
 date: 2020-01-10
+comments: true
+toc: true
+categories: "开源爱好者月刊"
+tags:
+  - 开源爱好者月刊
 ---
 
 ## 序言
