code: add read more function to each post
Signed-off-by: hylerrix <hylerrix@gmail.com>

--- a/source/_posts/004-osm-001.md
+++ b/source/_posts/004-osm-001.md
@@ -3,6 +3,7 @@ title: 开源爱好者月刊：第 1 期（202001）
 date: 2020-01-10
 comments: true
 toc: true
+# thumbnail: https://cdn.nlark.com/yuque/0/2020/png/86548/1580295805680-1ab4f6c1-c68a-4cbf-b9ac-34e3179698de.png
 categories: "开源爱好者月刊"
 tags:
   - 开源爱好者月刊
@@ -13,6 +14,8 @@ tags:
 本刊从自身对开源的爱好出发，计划先以每月一刊的形式更新。同时，本刊站在众多巨人的肩上：便捷访问也精彩万分的各大国际开源媒体；辛勤维护很久的《开源之道》和《科技爱好者周刊》等国内博文期刊；以及从黑客文化诞生以来默默付出的每一位开源爱好者......离开这些或许现在会大不相同。
 
 本杂志开源（GitHub: [ningowood/open-source-magazine](https://github.com/ningowood/open-source-magazine)），欢迎提交 issue，投稿或推荐你的开源内容。
+
+<!-- more -->
 
 ## 资讯
 
