--- a/source/_posts/005-osm-002.md
+++ b/source/_posts/005-osm-002.md
@@ -3,6 +3,7 @@ title: 开源爱好者月刊：第 2 期（202002）
 date: 2020-02-29
 comments: true
 toc: true
+# thumbnail: https://cdn.nlark.com/yuque/0/2020/png/86548/1582936563287-bf531b57-6da1-4a34-934a-ef8a394cc828.png
 categories: "开源爱好者月刊"
 tags:
   - 开源爱好者月刊
@@ -15,6 +16,8 @@ tags:
 本刊从自身对开源的爱好出发，计划先以每月一刊的形式更新。同时，本刊站在众多巨人的肩上，离开这些或许现在会大不相同。
 
 本杂志开源（GitHub: [ningowood/open-source-magazine](https://github.com/ningowood/open-source-magazine)），本月开始提供了各大平台信息源可以进行更多深入的阅读。更多动态，欢迎提交 issue，投稿或推荐你的开源内容。
+
+<!-- more -->
 
 根据第一期反馈，尝试写一次目录，摘要如下。
 
