--- a/source/_posts/006-osm-003.md
+++ b/source/_posts/006-osm-003.md
@@ -3,6 +3,7 @@ title: 开源爱好者月刊：第 3 期（202003）
 date: 2020-03-31
 comments: true
 toc: true
+# thumbnail: https://cdn.nlark.com/yuque/0/2020/png/86548/1585621059292-fb47a8e1-a01d-47e3-8365-459760982610.png
 categories: "开源爱好者月刊"
 tags:
   - 开源爱好者月刊
@@ -17,6 +18,8 @@ tags:
 从谷歌搜“Open Source”和百度上搜“开源”可见，疫情面前，开源的势头丝毫不减，每天都有大量的开源新闻和博客发布到网络。小至个体、大至公司，自发的开源社区也为疫情输出了大量的开源项目，保护着更多人的健康。为此，本期开辟了新的“微栏”模块，旨在专注开源的一个基本点，汇总一些代表性动态，小窥社区的大力量。本次的“微栏”主题，便紧跟全球的关注点而产生——“开源与疫情抗击”。
 
 此外，前两期的月刊均得到了“容器时代”公众号的转载，对于这份认可与支持深表感谢。“容器时代”公众号围绕容器技术生态圈汇总前沿技术博文，“容器”也是催化“云计算”与“开源”持续健康发展的核心技术之一，感兴趣的大家可以关注一波。由于更多人的关注，关于“凝果”开源动态月总结模块也将先不收录在这里。
+
+<!-- more -->
 
 本刊从自身对开源的爱好出发，计划先以每月一刊的形式更新。同时，本刊站在众多巨人的肩上，离开这些或许现在会大不相同。本杂志开源（GitHub: [ningowood/open-source-magazine](https://github.com/ningowood/open-source-magazine)），更多动态，欢迎提交 issue，投稿或推荐你的开源内容。
 
