--- a/source/_posts/008-osm-004.md
+++ b/source/_posts/008-osm-004.md
@@ -3,6 +3,7 @@ title: 开源爱好者月刊：第 4 期（202004）
 date: 2020-04-30
 comments: true
 toc: true
+# thumbnail: https://cdn.nlark.com/yuque/0/2020/png/86548/1588150182391-546ec1ca-6712-4729-89df-1f87b554dd0b.png
 categories: "开源爱好者月刊"
 tags:
   - 开源爱好者月刊
@@ -14,6 +15,8 @@ tags:
 随着第四期如期发布，三分之一的 2020 年也将宣告结束。本期将继续延续“微栏”的模块，旨在专注开源的一个基本点，汇总一些代表性动态，小窥社区的大力量，逐步为中文社区勾勒出新时代的开源全图谱。
 
 或许我们一直在自嘲，Github 是全球最大的“同性交友网站”——毕竟在较新的 Github 报告中，女性用户只占了 3%。但一定不会没有过这个疑问：在开源中，女性都去了哪里？本期的“微栏”将从这两天最新公布的“2020 杰出开源女性奖”出发，作一期内容整理。或许还是回答不了你脑中越来越多的问题，但相信你一定会找到自己的答案。
+
+<!-- more -->
 
 本刊从自身对开源的爱好出发，计划先以每月一刊的形式更新。同时，本刊站在众多巨人的肩上，离开这些或许现在会大不相同。本杂志开源（GitHub: [ningowood/open-source-magazine](https://github.com/ningowood/open-source-magazine)），并即将配有一份独特的 UI 界面，更多动态，欢迎提交 issue，投稿或推荐你的开源内容。
 
