--- a/source/_posts/00D-osm-005.md
+++ b/source/_posts/00D-osm-005.md
@@ -3,6 +3,7 @@ title: 开源爱好者月刊：第 5 期（202005）
 date: 2020-06-01
 comments: true
 toc: true
+# thumbnail: https://cdn.nlark.com/yuque/0/2020/png/86548/1590930302592-35c05915-69b6-496e-94df-7ee6485cb535.png
 categories: "开源爱好者月刊"
 tags:
   - 开源爱好者月刊
@@ -14,6 +15,8 @@ tags:
 本月 07 号，一则 GitHub 重磅发布四大新功能的新闻迅速捕获了我的双眼。作为 Github 的铁杆粉丝，从入学到职场以来，我的个人职业发展都离不开 Github 的存在，也留下了 1100+ Star 仓库、1400+ 有效 Commit 和 235+ Follower 的成长故事。到底是什么让 Github 如此深深的影响了我们？Github 又是怎样慢慢地改变了人们的编程方式？没有 Github 的话开源的现状会怎样？带着这份好奇，值此六一儿童节之际，开启了本期开源爱好者月刊的微栏：更了不起的 Github。并作一个简要的梳理。
 
 同时，社区中有关开源的新闻和新知识依旧层出不穷，一起来看看吧。
+
+<!-- more -->
 
 本刊从自身对开源的爱好出发，计划先以每月一刊的形式更新。同时，本刊站在众多巨人的肩上，离开这些或许现在会大不相同。本杂志开源（GitHub: [ningowood/open-source-magazine](https://github.com/ningowood/open-source-magazine)），并即将配有一份独特的 UI 界面，更多动态，欢迎提交 issue，投稿或推荐你的开源内容。
 
